# instapaper-rss-fork

./: .gitignore  Entry.py  Feed.py  LICENSE  Makefile  README.md  SavingQueue.py  main.py  pyproject.toml  source_format.py  test.py
config/: cookies.yml  folders.yml  priorities.yml  settings.yml  sources.yml  wrappers.yml
tests/: conftest.py  test_config_validation.py  test_entry.py  test_feed.py  test_instagram_feed.py  test_main.py  test_pickle_dictionary.py  test_saving_queue.py
